--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
- reverseproxy:
-    container_name: Rproxy
+  Rproxy:
+    container_name: Rproxy_con
     image: nginx
     volumes:
             - ./nginx.conf:/etc/nginx/conf.d/default.conf
