[Edit images_name]

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-sever{
+server{
     listen 80;
     location / {
       proxy_pass http://168.63.245.41;
@@ -8,3 +8,4 @@ sever{
       proxy_pass http://168.63.245.41:6001/;
     }
 }
+                                       
