--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: Rproxy_con
     image: Rproxy
     volumes:
-            - ./nginx.conf:/etc/nginx/conf.d/default.conf
+            - ./nginx/conf.d:/etc/nginx/conf.d
     ports:
             - "80:80"
 networks:
