--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
-  rproxy:
-    container_name: Rproxy_con
-    image: Rproxy
+ reverseproxy:
+    container_name: Rproxy
+    image: rproxy
     volumes:
             - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
