--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-server{
+sever{
     listen 80;
     location / {
       proxy_pass http://168.63.245.41;
@@ -8,4 +8,4 @@ server{
       proxy_pass http://168.63.245.41:6001/;
     }
 }
-                                       
+                                
