--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
  reverseproxy:
-    container_name: Rproxy
+    container_name: rproxy_con
     image: rproxy
     volumes:
             - ./nginx.conf:/etc/nginx/conf.d/default.conf
